<resources>

    <string name="app_name">Jumping_Jacks</string>
    <string name="welcome_to_jumping_jacks">Welcome To Jumping Jacks</string>
    <string name="enter_your_name">Enter Your Name:</string>
    <string name="name">Name:</string>
    <string name="txtFullName">Full</string>
    <string name="name_goes_here">Name goes here</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="homeId">HOME:</string>
    <string name="home">HOME</string>
    <string name="courses">COURSES</string>
    <string name="setting">SETTING</string>
    <string name="info">INFO</string>
    <string name="jumpingJacks">Welcome to Jumping Jacks</string>
    <string name="main">MAIN:</string>
    <string name="total_jacks_and_calories">Total Jacks and Calories</string>
    <string name="select_weekly_day">Select Weekly Day</string>
    <string name="select_weekly_days">select_weekly_days</string>
    <string name="select_jumping_days">Select Jumping Days</string>
    <string name="sunday_1">SUNDAY</string>
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wed">WED</string>
    <string name="thurs">THURS</string>
    <string name="friday">FRIDAY</string>
    <string name="sat">SAT</string>
    <string name="enter_numer_of_calories">Enter Numer of Calories</string>
    <string name="progress">PROGRESS</string>
    <string name="weekly_loss_weight_goes_here">Weekly Loss Weight goes Here</string>
    <string name="total_weight_loss">Total Weight Loss:</string>
    <string name="x_days">x-Days</string>
    <string name="submit">SUBMIT</string>
    <string name="daily_jacks_and_weight_lost">Daily Jacks and weight lost:</string>
    <string name="day_loss_jacks">DAY: LOSS: JACKS</string>
    <string name="enter_your_number_of_calories_eaten">Enter Your Number of Calories Eaten</string>
    <string name="welcome_to_settings">Welcome To Settings;</string>
    <string name="full_name">Full Name:</string>
    <string name="weight">Weight:</string>
    <string name="lbs">lbs</string>
    <string name="select_your_available_days">Select Your Available Days:</string>
    <string name="save">SAVE</string>
    <string name="reset">RESET</string>
    <string name="dob">DOB:</string>
    <string name="total_jumping_jacks">Total Jumping Jacks:</string>
    <string name="img_jj">TODO</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="full_name1">Full Name</string>
    <string name="sunday">Sunday</string>
    <string name="monday1">Monday</string>
    <string name="tuesday1">Tuesday</string>
    <string name="wednesday1">Wednesday</string>
    <string name="thursday1">Thursday</string>
    <string name="friday1">Friday</string>
    <string name="saturday1">Saturday</string>
    <string name="on_off1">On / Off</string>
    <string name="notification1">Notification:</string>
    <string name="jumping_jack_info">Jumping Jack Info:</string>
    <string name="welcome_to_main">Welcome To Main</string>
    <string name="select_available_days">Select Available Days:</string>
    <string name="welcome_to_setting">Welcome To Setting</string>
    <string name="picking_your_jumping_jack_days">Picking Your Jumping Jack Days</string>
    <string name="sunday">Sunday</string>
    <string name="thursday">Thursday</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thurs">THURS</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="pick_day">Pick Day</string>
    <string name="sat">SAT</string>
    <string name="enter_total_jacks">Enter Total jacks</string>
    <string name="enter_total_calories">Enter Total Calories</string>
    <string name="save">SAVE</string>
    <string name="end_of_day_calories">End of Day Calories</string>
    <string name="clear">CLEAR</string>
    <string name="current_tweight">Current tWeight:</string>
    <string name="this_jumping_jack_app_will_help_users_to_keep_track_of_your_endurance_throughout_the_week_and_their_weekly_weight_loss_the_user_will_enter_their_weight_age_and_birthday_and_the_app_will_give_your_weekly_jumping_jacks_and_total_weight">This Jumping Jack app will help users to keep track of your endurance throughout the week and their weekly weight loss. The user will enter their weight age and birthday and the app will give your weekly jumping jacks and total weight.</string>
    <string name="jumping_jacks_info">Jumping Jacks Info</string>
    <string name="age">age</string>

</resources>