<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JumpingJacksMain">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="118dp"
        android:layout_height="786dp"
        android:background="#53AED8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/homeId"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="110dp"
            android:text="@string/home"
            android:textColor="#4E342E"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintRight_toTopOf="parent"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/mainId"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            android:text="@string/main"
            android:textColor="#4E342E"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintRight_toTopOf="parent"
            tools:ignore="OnClick,UsingOnClickInXml"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/settingId"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="190dp"
            android:text="@string/setting"
            android:textColor="#4E342E"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintRight_toTopOf="parent"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/infoId"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="230dp"
            android:text="@string/info"
            android:textColor="#4E342E"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintRight_toTopOf="parent"
            tools:layout_editor_absoluteY="0dp"
            tools:text="INFO:" />

        <ImageView
            android:id="@+id/JJ_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="650dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/img_jj"
            android:isScrollContainer="false"
            app:srcCompat="@drawable/jumping_man1" />


    </FrameLayout>

    <TextView
        android:id="@+id/heading_myMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_main"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <TextView
        android:id="@+id/lbl_JJ_Days"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:text="@string/pick_day"
        app:layout_constraintBottom_toTopOf="@+id/dayGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <RadioGroup
        android:id="@+id/dayGroup"
        android:layout_width="157dp"
        android:layout_height="337dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842">

        <RadioButton
            android:id="@+id/rbn_Sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="saveButtonClicked"
            android:text="@string/sun"
            tools:ignore="UsingOnClickInXml" />

        <RadioButton
            android:id="@+id/rbn_Mon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveButtonClicked"
            android:text="@string/mon" />

        <RadioButton
            android:id="@+id/rbn_Tues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveButtonClicked"
            android:text="@string/tue" />

        <RadioButton
            android:id="@+id/rbn_Wed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveButtonClicked"
            android:text="@string/wed" />

        <RadioButton
            android:id="@+id/rbn_Thurs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveButtonClicked"
            android:text="@string/thurs" />

        <RadioButton
            android:id="@+id/rbn_Friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveButtonClicked"
            android:text="@string/fri" />

        <RadioButton
            android:id="@+id/rbn_Saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveButtonClicked"
            android:text="@string/sat" />

    </RadioGroup>

    <TextView
        android:id="@+id/lbl_NumJacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/enter_total_jacks"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_JJ_Days"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_jacks"
        app:layout_constraintTop_toTopOf="@+id/lbl_JJ_Days"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txt_jacks"
        android:layout_width="173dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="#ofJacks"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dayGroup"
        app:layout_constraintTop_toBottomOf="@+id/lbl_NumJacks"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/lbl_Cal_Eaten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="14dp"
        android:text="@string/end_of_day_calories"
        app:layout_constraintBottom_toTopOf="@+id/txt_Cal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dayGroup"
        app:layout_constraintTop_toBottomOf="@+id/txt_jacks" />

    <EditText
        android:id="@+id/txt_Cal"
        android:layout_width="151dp"
        android:layout_height="55dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="#OfCalories"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/dayGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dayGroup"
        app:layout_constraintTop_toBottomOf="@+id/txt_jacks"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/submit"
        android:layout_width="129dp"
        android:layout_height="45dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />

    <TextView
        android:id="@+id/DayResult"
        android:layout_width="152dp"
        android:layout_height="126dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_mainClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dayGroup"
        app:layout_constraintTop_toBottomOf="@+id/txt_Cal"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_mainClear"
        android:layout_width="109dp"
        android:layout_height="44dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/submit"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>